ini adalah tugas p05-Jquery-delete

--- a/index.html
+++ b/index.html
@@ -107,6 +107,6 @@
         <td class="data delate" id="hapus__5">Hapus</td>
       </tr>
     </table>
-    <script src="../Java Script/Dalate-jquery.js"></script>
+    <script src="Dalate-jquery.js"></script>
   </body>
 </html>
